--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -34,3 +34,5 @@ $category-600-text-color: #000073;
 $category-700-text-color: #988967;
 $category-800-text-color: #76193C;
 $category-900-text-color: #985721;
+
+$app-side-spacing: 10px;
